# llm-relay

./: .gitignore  README.ko.md  README.md  docker-compose.yml  llms-full.txt  llms.txt  pyproject.toml
src/llm_relay/: __init__.py  __main__.py
src/llm_relay/api/: display.py  routes.py
src/llm_relay/detect/: __init__.py  _fallback_cli.py  analyzer.py  base.py  bloat.py  cache.py  cli.py  featureflags.py  microcompact.py  models.py  orphan.py  parser.py  resume.py  scanner.py  stuck.py  synthetic.py
src/llm_relay/display/: __init__.py
src/llm_relay/display/static/: app.js  index.html  style.css
src/llm_relay/formatters/: json_fmt.py  plain.py  rich_fmt.py
src/llm_relay/guard/: guard.py
src/llm_relay/orch/: executor.py
src/llm_relay/providers/: __init__.py  base.py  claude_code.py  gemini_cli.py  openai_codex.py
src/llm_relay/proxy/: __init__.py  cc_cache_fix.py  cli.py  fileutil.py  proxy.py  pruner.py
src/llm_relay/recover/: doctor.py  recover.py
src/llm_relay/strategies/: aggressive.py  gentle.py  standard.py
tests/: test_scanner.py
tests/test_api/: test_display.py  test_routes.py  test_turns.py
tests/test_detectors/: test_featureflags.py  test_resume.py  test_synthetic.py
tests/test_mcp/: test_server.py
tests/test_orch/: test_discovery.py  test_executor.py  test_router.py
