[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-relay"
version = "0.2.0"
description = "Unified LLM usage management — API proxy, session diagnostics, multi-CLI orchestration. multi-CLI open-network DLC."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "QuartzUnit" }]
keywords = [
    "llm",
    "proxy",
    "diagnostics",
    "orchestration",
    "claude-code",
    "gemini-cli",
    "openai-codex",
    "rate-limit",
    "token-monitoring",
    "session-health",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.optional-dependencies]
proxy = ["httpx>=0.28", "uvicorn>=0.34", "starlette>=0.46"]
mcp = ["mcp[cli]>=1.0"]
cli = ["click>=8.0", "rich>=13.0"]
all = [
    "httpx>=0.28", "uvicorn>=0.34", "starlette>=0.46",
    "mcp[cli]>=1.0",
    "click>=8.0", "rich>=13.0",
]
dev = [
    "pytest>=8.0", "ruff>=0.8",
    "click>=8.0", "rich>=13.0",
    "httpx>=0.28",
    "mcp[cli]>=1.0",
]

[project.scripts]
llm-relay = "llm_relay.detect.__main__:main"
llm-relay-mcp = "llm_relay.mcp:run_server"

[project.urls]
Homepage = "https://github.com/QuartzUnit/llm-relay"
Repository = "https://github.com/QuartzUnit/llm-relay"
Issues = "https://github.com/QuartzUnit/llm-relay/issues"

[tool.hatch.build.targets.sdist]
exclude = ["vendor/"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_relay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["UP006", "UP007", "UP032", "UP035", "UP045"]  # Py3.9 compat: keep typing.Optional/List/Dict, .format()
